--- a/views/bcode.ejs
+++ b/views/bcode.ejs
@@ -702,6 +702,7 @@
   $(function () {
     //$('#example1').DataTable();
     $('#savedlogs').DataTable({
+      'order'       : [[0, 'desc']],
       'paging'      : true,
       'lengthChange': true,
       'searching'   : true,
