--- a/views/index.ejs
+++ b/views/index.ejs
@@ -643,6 +643,7 @@
   $(function () {
     //$('#example1').DataTable();
     $('#consumed').DataTable({
+      'order'       : [[0, 'desc']],
       'paging'      : true,
       'lengthChange': true,
       'searching'   : true,
