--- a/views/oee.ejs
+++ b/views/oee.ejs
@@ -138,13 +138,19 @@
         <li class="active treeview">
           <a href="#"  style="text-decoration: none;">
             <i class="fa fa-database"></i>
-            <span>Services</span>
+            <span>Yield</span>
             <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/coauploader" style="text-decoration: none;"><i class="fa fa-circle-o"></i> CoA Uploader</a></li>
+            <li><a href="/coauploader" style="text-decoration: none;"><i class="fa fa-circle-o"></i> Key Technical</a></li>
+          </ul>
+          <ul class="treeview-menu">
+            <li><a href="/coauploader" style="text-decoration: none;"><i class="fa fa-circle-o"></i> Top Physical</a></li>
+          </ul>
+          <ul class="treeview-menu">
+            <li><a href="/coauploader" style="text-decoration: none;"><i class="fa fa-circle-o"></i> Broken Wafers</a></li>
           </ul>
         </li>
         
@@ -162,12 +168,12 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Certificate of Analysis
-        <small>uploader</small>
+        Yield Report
+        <small>top physical</small>
       </h1>
       <ol class="breadcrumb">
         <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li class="active">Uploader</li>
+        <li class="active">top-physical</li>
       </ol>
     </section>
 
@@ -254,96 +260,10 @@
                     </div>
                     <!-- /.box-footer-->
                 </div>
-
-                <div class="box box-warning" style="height: 100%;">
-                  <div class="box-header with-border">
-                    <h3 class="box-title" style="padding-bottom:12px;">Upload History</h3>
-
-                    <div class="box-tools pull-right">
-                      <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-                      <i class="fa fa-minus"></i></button>
-                    </div>
-                  </div>
-
-                  <!-- /.box-header -->
-                  <div class="box-body table-responsive ">
-                    <table id="upload" class="table table-hover">
-                      <thead>
-                        <tr>
-                        <th>Upload Date</th>
-                        <th>Invoice</th>
-                        </tr>
-                      </thead>
-                      <% for (let i=0; i < uploaded_history.length; i++) {  %>
-                        <tr>
-                        <td><%= uploaded_history[i].uploaded_history_date %></td>
-                        <td><span class="label label-success"><%= uploaded_history[i].uploaded_history_order_no %></span></td>
-                        </tr>
-                      <% } %>
-                    </table>
-                  <ul id="logs"></ul>
-                  </div>
-                  
-                  <!-- /.box-body -->
-                  <div class="box-footer">
-                      <small style="float:right"><i></i></small>
-                  </div>
-                </div>
-                  <!-- /.box-footer-->
             </div>
 
-            <!-- Log Box-->
-            <div class="col-md-8">
-              <div class="box box-danger" style="height: 100%;">
-                    <div class="box-header with-border">
-                        <h3 class="box-title" style="padding-bottom:12px;">Consumed Stack IDs</h3>
-            
-                        <div class="box-tools pull-right">
-                        <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip"
-                                title="Collapse">
-                            <i class="fa fa-minus"></i></button>
-                        </div>
-                        <!--<button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
-                            <i class="fa fa-times"></i></button>
-                        </div>-->
-                    </div>
-                    <!-- /.box-header -->
-                    <div class="box-body table-responsive">
-                    <table id="consumed" class="table table-hover">
-                        <thead>
-                        <tr>
-                        <th>ID</th>
-                        <th>Consumed Date</th>
-                        <th>Line</th>
-                        <th>Lot ID</th>
-                        <th>Barcode</th>
-                        </tr>
-                        </thead>
-                        <% for (let i=0; i < consumed_obj.length; i++) {  %>
-                        <tr>
-                        <td><%= consumed_obj[i].consumed_id %></td>
-                        <td><%= consumed_obj[i].consumed_date %></td>
-                        <td><%= consumed_obj[i].consumed_line %></td>
-                        <td><%= consumed_obj[i].lot_id %></td>
-                        <td><span class="label label-success"><%= consumed_obj[i].consumed_barcode %></span></td>
-                        </tr>
-                        <% } %>
-                    </table>
-                    <ul id="logs"></ul>
-                    </div>
-                    <!-- /.box-body -->
-                    <div class="box-footer">
-                        <small style="float:right"><i></i></small>
-                    </div>
-                    <!-- /.box-footer-->
-              </div>
-            </div>
-            
         </div>
-
-        <div class="row">
-          
-        </div>
+        
         
         <!-- /.box -->
   
@@ -687,21 +607,6 @@
       'paging'      : true,
       'lengthChange': true,
       'searching'   : true,
-      'ordering'    : true,
-      'info'        : true,
-      'autoWidth'   : false
-    });
-  });
-</script>
-
-<script>
-  $(function () {
-    //$('#example1').DataTable();
-    $('#upload').DataTable({
-      'order'       : [[0, 'desc']],
-      'paging'      : true,
-      'lengthChange': false,
-      'searching'   : false,
       'ordering'    : true,
       'info'        : true,
       'autoWidth'   : false
